# course-MAS

./: .gitignore
module_02_langchain/ashubin_homework/: .env.template  README.md  pyproject.toml  smart_assistant.py
module_03_rag/: .env.template  chapter_02_embeddings.md  chapter_03_vector_databases.md  chapter_04_data_preparation.md  chapter_06_reranking.md  lecture_01_rag_architecture.md  lecture_05_advanced_retrieval.md  lecture_07_generation_with_context.md  pyproject.toml
module_06_mas/: .env.template  examples_01_introduction.ipynb  examples_06_frameworks.ipynb  examples_07_design.ipynb  lecture_01_from_agent_to_system.md  lecture_02_patterns.md  lecture_03_combining_patterns.md  lecture_04_protocols_mcp_a2a.md  lecture_05_protocol_stack.md  lecture_06_alternative_frameworks.md  lecture_07_real_world_design.md  llm_config.py  main.py  pyproject.toml
module_06_mas/examples_02_patterns/: examples_02_10_debate.ipynb  examples_02_11_round_robin.ipynb  examples_02_12_voting.ipynb  examples_02_13_ensemble.ipynb  examples_02_14_map_reduce.ipynb  examples_02_1_supervisor.ipynb  examples_02_2_hierarchical_supervisor.ipynb  examples_02_3_router.ipynb  examples_02_4_handoffs.ipynb  examples_02_5_pipeline.ipynb  examples_02_6_swarm.ipynb  examples_02_7_plan_execute.ipynb  examples_02_8_dynamic_spawning.ipynb  examples_02_9_reflection.ipynb  examples_02_subgraphs.ipynb
module_06_mas/examples_03_combinations/: examples_03_1_supervisor_reflection.ipynb  examples_03_2_supervisor_debate.ipynb  examples_03_3_pipeline_voting.ipynb  examples_03_4_pipeline_reflection.ipynb  examples_03_5_plan_execute_map_reduce.ipynb  examples_03_6_network_plan_execute.ipynb  (+3 more)
(+29 files in other folders)
