[project]
name = "module-06-mas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.12.0",
    "dotenv>=0.9.9",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "nbconvert>=7.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
